--- a/app/index.html
+++ b/app/index.html
@@ -2,74 +2,12 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#0b1220" />
-  <title>RControl Factory</title>
-
-  <!-- CSS RELATIVO (não usa /app/styles.css) -->
-  <link rel="stylesheet" href="./styles.css" />
-
-  <!-- iOS PWA -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta http-equiv="refresh" content="0; url=/" />
+  <title>Redirect</title>
 </head>
-
 <body>
-  <!-- Se ficar branco, pelo menos isso aparece -->
-  <pre id="boot"
-       style="position:fixed;top:0;left:0;right:0;padding:10px;margin:0;
-              background:#fff;color:#111;font:12px/1.3 ui-monospace,Menlo,monospace;z-index:999999">
-Boot: carregando...
-  </pre>
-
-  <div id="app"></div>
-
-  <script>
-    (function(){
-      const boot = document.getElementById("boot");
-      function log(s){ if(boot) boot.textContent += "\n" + s; }
-      window.addEventListener("error", (e)=> log("JS ERRO: " + (e.message||e.error||e)));
-      window.addEventListener("unhandledrejection", (e)=> log("PROMISE ERRO: " + (e.reason?.message||e.reason||e)));
-
-      log("Boot: scripts vão carregar...");
-    })();
-  </script>
-
-  <!-- CORE (RELATIVO) -->
-  <script defer src="./app.js"></script>
-
-  <!-- TOUCH FIX (RELATIVO) -->
-  <script defer src="./js/ui.touchfix.js"></script>
-
-  <!-- ROUTER -->
-  <script defer src="./js/router.js"></script>
-
-  <!-- ADMIN -->
-  <script defer src="./js/admin.js"></script>
-
-  <!-- CORE MODULES -->
-  <script defer src="./js/core/vfs_overrides.js"></script>
-  <script defer src="./js/core/thompson.js"></script>
-  <script defer src="./js/core/github_sync.js"></script>
-  <script defer src="./js/core/mother_selfupdate.js"></script>
-
-  <!-- SW REGISTER (RELATIVO!) -->
-  <script>
-    (function(){
-      if (!("serviceWorker" in navigator)) return;
-      window.addEventListener("load", async () => {
-        try {
-          // sw.js dentro de /app/
-          await navigator.serviceWorker.register("./sw.js", { scope: "/" });
-          const boot = document.getElementById("boot");
-          if (boot) boot.textContent += "\nSW: registrado OK";
-          setTimeout(()=>{ if(boot) boot.style.display="none"; }, 1200);
-        } catch(e){
-          const boot = document.getElementById("boot");
-          if (boot) boot.textContent += "\nSW ERRO: " + (e.message||e);
-        }
-      });
-    })();
-  </script>
+  Redirecionando...
+  <script>location.replace("/");</script>
 </body>
 </html>
