--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
 
-  <!-- CSS vem da pasta /app -->
   <link rel="stylesheet" href="/app/styles.css" />
 
-  <!-- iOS PWA -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
@@ -20,13 +18,8 @@
   <!-- CORE -->
   <script defer src="/app/app.js"></script>
 
-  <!-- TOUCH FIX -->
-  <script defer src="/app/js/ui.touchfix.js"></script>
-
-  <!-- ROUTER -->
+  <!-- ROUTER/ADMIN (se existirem) -->
   <script defer src="/app/js/router.js"></script>
-
-  <!-- ADMIN -->
   <script defer src="/app/js/admin.js"></script>
 
   <!-- CORE MODULES -->
@@ -41,8 +34,8 @@
       if (!("serviceWorker" in navigator)) return;
       window.addEventListener("load", async () => {
         try {
-          // SW FICA EM /app/sw.js mas controla o site todo
           await navigator.serviceWorker.register("/app/sw.js", { scope: "/" });
+          console.log("SW ok");
         } catch(e){
           console.warn("SW erro:", e);
         }
