--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#0b1220" />
-  <title>RControl Factory</title>
-
-  <!-- Redireciona sempre para a pasta do app -->
-  <meta http-equiv="refresh" content="0; url=/app/" />
-  <link rel="canonical" href="/app/" />
-
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta http-equiv="refresh" content="0;url=/app/" />
+  <title>Redirecionando…</title>
   <style>
-    body{margin:0;font-family:-apple-system,system-ui,Segoe UI,Roboto,Helvetica,Arial;background:#0b1220;color:#fff}
-    .box{padding:24px}
-    a{color:#16c784}
+    body{font-family:system-ui;margin:0;padding:18px}
+    a{color:#0a7}
   </style>
 </head>
 <body>
-  <div class="box">
-    Redirecionando para <a href="/app/">/app/</a>…
-  </div>
-
+  Redirecionando para <a href="/app/">/app/</a>…
   <script>
-    // fallback (caso meta refresh falhe)
     (function(){
-      if (location.pathname === "/" || location.pathname === "/index.html") {
-        location.replace("/app/");
-      }
+      try {
+        // Sempre manda a raiz pro app
+        if (location.pathname === "/" || location.pathname === "/index.html") {
+          location.replace("/app/");
+        }
+        // Se cair em qualquer outra rota fora de /app, também manda pro app
+        else if (!location.pathname.startsWith("/app/")) {
+          location.replace("/app/");
+        }
+      } catch {}
     })();
   </script>
+  <noscript>
+    <p>Abra: <a href="/app/">/app/</a></p>
+  </noscript>
 </body>
 </html>
