--- a/index.html
+++ b/index.html
@@ -2,32 +2,24 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta http-equiv="refresh" content="0;url=/app/" />
-  <title>Redirecionando…</title>
-  <style>
-    body{font-family:system-ui;margin:0;padding:18px}
-    a{color:#0a7}
-  </style>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#0b1220" />
+  <title>RControl Factory</title>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
-<body>
-  Redirecionando para <a href="/app/">/app/</a>…
+<body style="font-family:system-ui;padding:18px">
+  Redirecionando…
   <script>
-    (function(){
+    (function () {
       try {
-        // Sempre manda a raiz pro app
-        if (location.pathname === "/" || location.pathname === "/index.html") {
-          location.replace("/app/");
-        }
-        // Se cair em qualquer outra rota fora de /app, também manda pro app
-        else if (!location.pathname.startsWith("/app/")) {
-          location.replace("/app/");
-        }
-      } catch {}
+        // Se já está no /app/ (ou dentro dele), não mexe
+        if (location.pathname.startsWith("/app/")) return;
+
+        // Força entrada padrão
+        location.replace("/app/");
+      } catch (e) {}
     })();
   </script>
-  <noscript>
-    <p>Abra: <a href="/app/">/app/</a></p>
-  </noscript>
 </body>
 </html>
