--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <meta name="theme-color" content="#0b1220" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RControl Factory</title>
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="theme-color" content="#0b1220" />
 </head>
 <body style="font-family:system-ui;padding:18px">
-  Redirecionando…
-  <script>
-    (function () {
-      try {
-        // Se já está no /app/ (ou dentro dele), não mexe
-        if (location.pathname.startsWith("/app/")) return;
+  <div>Redirecionando para o app…</div>
 
-        // Força entrada padrão
-        location.replace("/app/");
-      } catch (e) {}
+  <script>
+    // SEM LOOP: raiz sempre manda pra /app/
+    (function () {
+      var target = "/app/";
+      if (location.pathname === "/" || location.pathname === "/index.html") {
+        location.replace(target);
+      }
+      // Se alguém abrir /app/* não mexe
     })();
   </script>
 </body>
