--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RControl Factory</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#0b1220" />
+  <title>RControl Factory</title>
+  <meta http-equiv="refresh" content="0; url=/app/" />
 </head>
 <body style="font-family:system-ui;padding:18px">
-  <div>Redirecionando para o app…</div>
-
+  Redirecionando para o app…
   <script>
-    // SEM LOOP: raiz sempre manda pra /app/
-    (function () {
-      var target = "/app/";
-      if (location.pathname === "/" || location.pathname === "/index.html") {
-        location.replace(target);
-      }
-      // Se alguém abrir /app/* não mexe
-    })();
+    location.replace("/app/");
   </script>
 </body>
 </html>
