--- a/app/index.html
+++ b/app/index.html
@@ -2,28 +2,48 @@
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RControl Factory</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#0b1020" />
+
+  <title>RControl Factory</title>
+
+  <!-- PWA -->
   <link rel="manifest" href="/manifest.json" />
+
+  <!-- iOS PWA (não quebra nada se não tiver ícones ainda) -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="RControl Factory" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="/styles.css" />
 </head>
+
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
-  <div id="app">
+  <!-- IMPORTANTE: o core do RCF usa #rcfRoot (seu log mostra isso) -->
+  <div id="rcfRoot">
     <div style="padding:14px;font-family:system-ui">Carregando…</div>
   </div>
 
   <script>
-    // registra SW na raiz (agora o site inteiro é a pasta /app)
+    // Registra SW no mesmo origin.
+    // Em Cloudflare Pages com "Build output: app", o arquivo app/sw.js vira /sw.js no deploy.
     (function () {
-      if (!("serviceWorker" in navigator)) return;
-      navigator.serviceWorker.register("/sw.js", { scope: "/" })
-        .catch(() => {});
+      try {
+        if (!("serviceWorker" in navigator)) return;
+
+        // Evita registrar em modos/ambientes estranhos
+        if (location.protocol !== "https:" && location.hostname !== "localhost") return;
+
+        // registra e pronto (seu botão "Unregister SW" já resolve limpeza)
+        navigator.serviceWorker.register("/sw.js", { scope: "/" }).catch(function(){});
+      } catch {}
     })();
   </script>
 
-  <script src="/app.js"></script>
+  <!-- Core -->
+  <script src="/app.js" defer></script>
 </body>
 </html>
